--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "nrf-device-lister",
   "version": "0.1.0",
-  "description": "List conflated USB/serialport/jlink devices",
+  "description": "List USB/serialport/jlink devices based on capabilities and conflate them by serial number",
   "module": "src/device-lister.js",
   "main": "dist/device-lister.js",
   "author": "Iván Sánchez Ortega <ivan@sanchezortega.es>",
   "license": "BSD-3",
   "private": true,
+  "bin": {
+    "nrf-device-lister": "./bin/device-lister.js"
+    },
   "scripts": {
     "rollup": "rollup -c rollup.config.js",
     "lint": "eslint src/",
@@ -15,12 +18,17 @@
   "dependencies": {
     "commander": "^2.14.1",
     "debug": "^3.1.0",
+    "noble": "^1.9.0",
     "pc-nrfjprog-js": "^1.2.0",
     "serialport": "^6.0.5",
     "usb": "^1.3.1"
   },
   "devDependencies": {
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "rollup": "^0.55.3",
-    "rollup-plugin-buble": "^0.18.0"
+    "rollup-plugin-buble": "^0.18.0",
+    "rollup-plugin-eslint": "^4.0.0"
   }
 }
