--- a/.eslintrc
+++ b/.eslintrc
@@ -36,15 +36,7 @@
         ],
         "import/extensions": ["off"],
         "no-undef": 1,
-        "no-unused-vars": 1,
-        "comma-dangle": ["error", {
-            "arrays": "always-multiline",
-            "objects": "always-multiline",
-            "imports": "always-multiline",
-            "exports": "always-multiline",
-            "functions": "ignore",
-        }],
-        "no-underscore-dangle": 0
+        "no-unused-vars": 1
     },
     "plugins": [
         "import"
