--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lintfix": "eslint src/ --fix"
   },
   "dependencies": {
+    "await-semaphore": "^0.1.3",
     "commander": "^2.14.1",
     "debug": "^3.1.0",
     "noble": "^1.9.0",
@@ -27,7 +28,7 @@
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "rollup": "^0.55.3",
+    "rollup": "^0.56.4",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-eslint": "^4.0.0"
   }
