--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nrf-device-lister",
   "version": "0.1.0",
-  "description": "List USB/serialport/jlink devices based on capabilities and conflate them by serial number",
+  "description": "List USB/serialport/jlink devices based on traits and conflate them by serial number",
   "module": "src/device-lister.js",
   "main": "dist/device-lister.js",
   "author": "Iván Sánchez Ortega <ivan@sanchezortega.es>",
