Specify files to include in npm package
As dist/ is in .gitignore, npm will not include it when publishing to
npm. Adding all the files we need in package.json to make sure they are
included.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "lint": "eslint src/",
     "lintfix": "eslint src/ --fix"
   },
+  "files": [
+    "bin/",
+    "src/",
+    "dist/",
+    "LICENSE",
+    "README.md"
+  ],
   "dependencies": {
     "commander": "^2.14.1",
     "debug": "^3.1.0",
