--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "rollup": "rollup -c rollup.config.js",
     "lint": "eslint src/ bin/",
-    "lintfix": "eslint src/ bin/ --fix"
+    "lintfix": "eslint src/ bin/ --fix",
+    "test": "rollup -c rollup.config.js && DEBUG=device-lister:test jest --detectOpenHandles --runInBand"
   },
   "files": [
     "bin/",
@@ -25,9 +26,8 @@
     "await-semaphore": "^0.1.3",
     "commander": "^2.14.1",
     "debug": "^3.1.0",
-    "pc-nrfjprog-js": "^1.2.0",
     "serialport": "^6.2.0",
-    "usb": "^1.3.1"
+    "usb": "^1.3.3"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
@@ -35,6 +35,13 @@
     "eslint-plugin-import": "^2.8.0",
     "rollup": "^0.56.4",
     "rollup-plugin-buble": "^0.18.0",
-    "rollup-plugin-eslint": "^4.0.0"
+    "rollup-plugin-eslint": "^4.0.0",
+    "pc-nrfjprog-js": "^1.3.1",
+    "jest": "^23.6.0"
+  },
+  "jest": {
+    "testMatch": [
+      "**/test/?(*.)+(test).js?(x)"
+    ]
   }
 }
