--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nrf-device-lister",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "List USB/serialport/jlink devices based on traits and conflate them by serial number",
   "module": "src/device-lister.js",
   "main": "dist/device-lister.js",
-  "author": "Iván Sánchez Ortega <ivan@sanchezortega.es>",
-  "license": "BSD-3",
+  "author": "Nordic Semiconductor ASA",
+  "license": "SEE LICENSE IN LICENSE",
   "bin": {
     "nrf-device-lister": "./bin/device-lister.js"
   },
@@ -27,6 +27,7 @@
     "commander": "^2.14.1",
     "debug": "^3.1.0",
     "serialport": "^6.2.0",
+    "pc-nrfjprog-js": "^1.3.1",
     "usb": "^1.3.3"
   },
   "devDependencies": {
@@ -36,7 +37,6 @@
     "rollup": "^0.56.4",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-eslint": "^4.0.0",
-    "pc-nrfjprog-js": "^1.3.1",
     "jest": "^23.6.0"
   },
   "jest": {
