--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrf-device-lister",
-  "version": "2.0.2",
+  "version": "2.0.3-alpha",
   "description": "List USB/serialport/jlink devices based on traits and conflate them by serial number",
   "module": "src/device-lister.js",
   "main": "dist/device-lister.js",
@@ -27,7 +27,7 @@
     "commander": "^2.14.1",
     "debug": "^3.1.0",
     "serialport": "^6.2.0",
-    "pc-nrfjprog-js": "^1.3.1",
+    "pc-nrfjprog-js": "1.4.0-alpha",
     "usb": "^1.3.3"
   },
   "devDependencies": {
