--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "commander": "^2.14.1",
     "debug": "^3.1.0",
     "serialport": "^6.2.0",
-    "pc-nrfjprog-js": "^1.4.0",
-    "nrf-usb": "^0.0.1"
+    "pc-nrfjprog-js": "^1.4.4",
+    "usb": "github:NordicPlayground/node-usb#1.5.0"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
