--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "debug": "^3.1.0",
     "serialport": "^6.2.0",
     "pc-nrfjprog-js": "^1.4.4",
-    "usb": "github:NordicPlayground/node-usb#1.5.0"
+    "usb": "git+https://github.com/NordicPlayground/node-usb.git#semver:^1.5.0"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
