--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "rollup": "rollup -c rollup.config.js",
     "lint": "eslint src/ bin/",
     "lintfix": "eslint src/ bin/ --fix",
-    "test": "rollup -c rollup.config.js && DEBUG=device-lister:test jest --detectOpenHandles --runInBand"
+    "test": "rollup -c rollup.config.js && jest --detectOpenHandles --runInBand"
   },
   "files": [
     "bin/",
@@ -35,8 +35,8 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "rollup": "^0.56.4",
-    "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-eslint": "^4.0.0",
+    "rollup-plugin-commonjs": "^9.2.3",
     "jest": "^23.6.0"
   },
   "jest": {
