--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rollup": "^0.56.4",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-commonjs": "^9.2.3",
+     "pc-nrfconnect-build": "git+https://github.com/NordicPlayground/pc-nrfconnect-build.git#semver:^0.0.1",
     "jest": "^23.6.0"
   },
   "jest": {
