--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrf-device-lister",
-  "version": "2.2.0",
+  "version": "2.3.0-alpha.0",
   "description": "List USB/serialport/jlink devices based on traits and conflate them by serial number",
   "module": "src/device-lister.js",
   "main": "dist/device-lister.js",
@@ -24,21 +24,21 @@
   ],
   "dependencies": {
     "await-semaphore": "^0.1.3",
-    "commander": "^2.14.1",
-    "debug": "^3.1.0",
-    "serialport": "^6.2.0",
-    "pc-nrfjprog-js": "^1.5.0",
-    "usb": "git+https://github.com/NordicPlayground/node-usb.git#semver:^1.5.0"
+    "commander": "^2.20.0",
+    "debug": "^4.1.1",
+    "serialport": "^7.1.5",
+    "pc-nrfjprog-js": "^1.5.4",
+    "usb": "^1.6.0"
   },
   "devDependencies": {
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "rollup": "^0.56.4",
-    "rollup-plugin-eslint": "^4.0.0",
-    "rollup-plugin-commonjs": "^9.2.3",
-     "pc-nrfconnect-build": "git+https://github.com/NordicPlayground/pc-nrfconnect-build.git#semver:^0.0.1",
-    "jest": "^23.6.0"
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0",
+    "rollup": "^1.16.6",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "pc-nrfconnect-build": "git+https://github.com/NordicPlayground/pc-nrfconnect-build.git#semver:^0.0.1",
+    "jest": "^24.8.0"
   },
   "jest": {
     "testMatch": [
