Add variables group

--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -5,6 +5,8 @@ jobs:
 - job: Build
   pool:
     vmImage: 'Ubuntu-16.04'
+  variables:
+    - group: wayland
   steps:
   - task: NodeTool@0
     inputs:
