Force to unpublish

--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -18,5 +18,5 @@ jobs:
       npm config set //npm.nordicsemi.no/:_authToken $(WAYLAND_NPM_TOKEN_INTERNAL)
       npm config set registry https://npm.nordicsemi.no/
       npm config set strict-ssl false
-      npm unpublish
+      npm unpublish --force
       npm publish
