--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -12,11 +12,15 @@ jobs:
     inputs:
       versionSpec: 10
   - script: |
-      npm i
-  - script: |
+      npm config set strict-ssl false
       npm config set //npm.nordicsemi.no/:_authToken $(WAYLAND_NPM_TOKEN_INTERNAL)
       npm config set registry https://npm.nordicsemi.no/
-      npm config set strict-ssl false
+      npm config set @babel:registry https://registry.npmjs.org/
+      npm config set @cnakazawa:registry https://registry.npmjs.org/
+      npm config set @jest:registry https://registry.npmjs.org/
+      npm config set @serialport:registry https://registry.npmjs.org/
+      npm config set @types:registry https://registry.npmjs.org/
+      npm i
       npm run rollup
       npm unpublish --force
       npm publish
