--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,18 @@ jobs:
   - task: NodeTool@0
     inputs:
       versionSpec: 12
+  - task: DownloadSecureFile@1
+    name: nrfjprogLinux
+    inputs:
+      secureFile: "nrfjprog-10.7.0-linux_x64.tar.gz"
+    condition: and(eq(variables['release'], 'true'), contains(variables['image_name'], 'ubuntu'))
+    displayName: 'Donwload internal nrfjprog for release'
+  - bash: |
+      mkdir -p node_modules/pc-nrfjprog-js/nrfjprog
+      echo $(nrfjprogLinux.secureFilePath)
+      mv $(nrfjprogLinux.secureFilePath) node_modules/pc-nrfjprog-js/nrfjprog
+    condition: and(eq(variables['release'], 'true'), contains(variables['image_name'], 'ubuntu'))
+    displayName: 'Download internal nrfjprog for release'
   - bash: |
       set -o errexit -o pipefail
       npm config set strict-ssl false
