--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ jobs:
       npm config set @jest:registry https://registry.npmjs.org/
       npm config set @serialport:registry https://registry.npmjs.org/
       npm config set @types:registry https://registry.npmjs.org/
+      npm config set string_decoder:registry https://registry.npmjs.org/
     condition: eq(variables['Release'], 'true')
     displayName: 'Set up internal NPM registry'
   - bash: |
