--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,7 @@ jobs:
       npm config set @serialport:registry https://registry.npmjs.org/
       npm config set @types:registry https://registry.npmjs.org/
       npm config set string_decoder:registry https://registry.npmjs.org/
+      export ENABLE_DRAFT_TEST=true
     condition: eq(variables['Release'], 'true')
     displayName: 'Set up internal NPM registry'
   - bash: |
