--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,12 +34,16 @@ jobs:
       npm config set @types:registry https://registry.npmjs.org/
       npm config set string_decoder:registry https://registry.npmjs.org/
       npm config set glob:registry https://registry.npmjs.org/
+      npm i
+      npm run rollup
     condition: eq(variables['release'], 'true')
-    displayName: 'Setup environment'
+    displayName: 'Build with internal release'
   - bash: |
       set -o errexit -o pipefail
       npm i
       npm run rollup
+    condition: nq(variables['release'], 'true')
+    displayName: 'Build'
   - bash: |
       set -o errexit -o pipefail
       npm pack
