--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "lintfix": "eslint src/ bin/ --fix",
     "test": "rollup -c rollup.config.js && jest --detectOpenHandles --runInBand"
   },
+  "binary": {
+    "module_name": "pc-nrfjprog-js",
+    "module_path": "./build/Release",
+    "host": "https://github.com/NordicSemiconductor/pc-nrfjprog-js/releases/download/",
+    "remote_path": "v{version}"
+  },
   "files": [
     "bin/",
     "src/",
@@ -37,7 +43,7 @@
     "rollup": "^1.16.6",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-commonjs": "^10.0.1",
-    "pc-nrfconnect-build": "git+https://github.com/NordicPlayground/pc-nrfconnect-build.git#semver:^0.0.1",
+    "pc-nrfconnect-build": "git+https://github.com/NordicPlayground/pc-nrfconnect-build.git#semver:^0.3.0",
     "jest": "^24.8.0"
   },
   "jest": {
