--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,14 +25,15 @@ jobs:
       export NODE_PRE_GYP_GITHUB_TOKEN=$(WAYLAND_GITHUB_TOKEN)
       npm config set strict-ssl false
       npm config set //npm.nordicsemi.no/:_authToken $(WAYLAND_NPM_TOKEN_INTERNAL)
-      npm config set registry https://npm.nordicsemi.no/
-      npm config set @babel:registry https://registry.npmjs.org/
-      npm config set @cnakazawa:registry https://registry.npmjs.org/
-      npm config set @jest:registry https://registry.npmjs.org/
-      npm config set @serialport:registry https://registry.npmjs.org/
-      npm config set @types:registry https://registry.npmjs.org/
-      npm config set string_decoder:registry https://registry.npmjs.org/
-      npm config set glob:registry https://registry.npmjs.org/
+      # npm config set pc-nrfjprog-js:registry https://npm.nordicsemi.no/
+      # npm config set registry https://npm.nordicsemi.no/
+      # npm config set @babel:registry https://registry.npmjs.org/
+      # npm config set @cnakazawa:registry https://registry.npmjs.org/
+      # npm config set @jest:registry https://registry.npmjs.org/
+      # npm config set @serialport:registry https://registry.npmjs.org/
+      # npm config set @types:registry https://registry.npmjs.org/
+      # npm config set string_decoder:registry https://registry.npmjs.org/
+      # npm config set glob:registry https://registry.npmjs.org/
       npm i
       npm run rollup
     condition: eq(variables['INTERNAL'], 'true')
