--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrf-device-lister",
-  "version": "2.5.3",
+  "version": "2.5.4",
   "description": "List USB/serialport/jlink devices based on traits and conflate them by serial number",
   "module": "src/device-lister.js",
   "main": "dist/device-lister.js",
@@ -29,12 +29,12 @@
     "README.md"
   ],
   "dependencies": {
-    "await-semaphore": "^0.1.3",
-    "commander": "^2.20.0",
-    "debug": "^4.1.1",
-    "pc-nrfjprog-js": "^1.7.2",
-    "serialport": "^9.0.0",
-    "usb": "^1.6.0"
+    "await-semaphore": "~0.1.3",
+    "commander": "~2.20.0",
+    "debug": "~4.1.1",
+    "pc-nrfjprog-js": "~1.7.2",
+    "serialport": "~9.0.0",
+    "usb": "~1.6.5"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
